# a23_analysis_programs

./: CMakeLists.txt  README.md
daily/: 2018.12.13-Compare-Filters-Plot.cxx  2018.12.13-Compare-Filters.cxx  2018.12.23-LowFreqPower-Plot-2.cxx  2018.12.23-LowFreqPower-Plot.cxx  2018.12.23-LowFreqPower.cxx  2019.01.22-Get-Clean-Events.cxx  2019.02.25-OffsetBlock-Demo.cxx  2019.02.25-OffsetBlock.cxx  2019.02.25-OffsetBlockVTime-Plot.cxx  2019.02.25-OffsetBlockVTime.cxx  2019.03.13-NumSamples.cxx  2019.04.02-CWID-Sim-Test.cxx  2019.05.12_PhiVsTime.cxx  2019.05.14_RecoVSTime_MultiRun.cxx  2019.05.14_RecoVsTime_MultiRun_SurfaceRate.cxx  2019.05.17_CalVsTime.cxx  2019.05.17_SaveMaps.cxx  2019.05.17_StackMaps.cxx  2019.05.23_RecoBiasStudy.cxx  2019.05.29_MaximumOffsetBlock.cxx  2019.06.04-SpareChannelStats.cxx  2019.06.04_SpareChannelStats_Plot.cxx  2019.06.07_DoublePeakIssue.cxx  2019.06.22_DataVsSim.cxx  2019.06.22_LookAtCorrDistro.cxx  2019.06.22_LookAtEnergyDistro.cxx  2019.06.23_FilterAngularAcceptance.cxx  2019.06.26-MoreBadSpareChans.cxx  2019.06.26_SpareChannelStats_Plot_AllBlockMeans.cxx  2019.06.26_SpareChannelStats_Plot_wMeanOverStdDev.cxx  2019.08.26_MapForJorge.cxx  2019.09.25-NumSamples_v2.cxx  2019.09.25-TraceLength.cxx  2019.10.16_SoftTriggerRate.cxx  2019.10.17-BasicEventInfo.cxx  2019.10.17-BasicEventInfo_Sim.cxx  2019.10.18-BasicEventInfo_Plot.cxx  2019.10.21_WFRMS_Study.cxx  2019.10.21_WFRMS_Study_InFilter.cxx  2019.10.24_WFRMS_Study.cxx  (+3 more)
daily/old/: 2018.12.13-Compare-Filters-Plot_OLD.cxx  2018.12.13-Compare-Filters_OLD.cxx  README.md
diffuse/: README.md  add_branch.cxx  add_branch_debug.cxx  add_branch_old.cpp  add_branch_updategeocut.cxx  add_branch_updategeocut_100.cxx  append_run_numbers.cxx  aux_function.cxx  cuts_refine_cal_box.cxx  cuts_refine_filter.cxx  cuts_save_reco.cxx  cuts_save_reco_fixCW.cxx  debug_cw_id.cxx  debug_cw_id_rate.cxx  debug_cw_id_tb.cxx  debug_print_event.cxx  debug_print_event_new.cxx  debug_print_trouble_events.cxx  print_all_baselines.cxx  print_map_now.cxx  tabulate_livetime.cxx  v2_analysis_CWID.cxx  v2_analysis_CWID_appendTB.cxx  v2_analysis_baselines.cxx  v2_analysis_filter.cxx  v2_analysis_reco.cxx  v2_analysis_run_summary.cxx  v2_final_cuts.cxx  v2_final_plots.cxx  v2_final_wfrms.cxx  v2_optimize.cxx  v2_optimize_scale_factor.cxx  v2_save_vals.cxx
diffuse/100pct/: v2_analysis_CWID_100.cxx  v2_analysis_CWID_100_appendTB.cxx  v2_analysis_CWID_100_correct.cxx  v2_analysis_CWID_100_test.cxx  v2_analysis_audit_100.cxx  v2_analysis_auditgood_100.cxx  v2_analysis_filter.cxx  v2_analysis_reco_100.cxx  v2_analysis_reco_100_debug.cxx  v2_save_vals_100.cxx  v2_save_vals_100_A3.cxx
diffuse/grid_optimize/: save_info_vs_intercept.cxx  save_info_vs_intercept_2019.07.01_noCarefulSurfaceBreakout..cxx  save_info_vs_intercept_A3.cxx  search_grid.cxx  search_grid_v2.cxx  search_grid_v2_2dim.cxx  search_grid_v3.cxx  search_grid_v4.cxx  search_grid_v4_debug.cxx  search_grid_v5.cpp  search_grid_v5_parelleldev.cxx  search_grid_v6.cpp
diffuse/old/: README.md  v2_final_cuts_2019.07.01_noCarefulSurfaceBreakout.cxx  v2_final_plots_2019.07.01_noCarefulSurfaceBreakout.cxx  v2_optimize_2019.07.01_noCarefulSurfaceBreakout.cxx  v2_optimize_loop_pols.cxx  v2_optimize_scale_factor.cxx  v2_save_vals_2019.07.01_noCarefulSurfaceBreakout.cxx  v2_save_vals_OLD.cxx  v2_save_vals_OLD_by_year.cxx
diffuse/post_unblinding/: postunblinding_SurfaceDistro.cxx  postunblinding_SurfaceDistro_A3.cxx
diffuse/sim_handling/: sync_sim.cxx
diffuse/unblind/: replot_2D_distros.cxx  unblind_background_fit.cxx  unblind_background_fit_A3.cxx  unblind_safety.cxx  (+9 more)
examples/: Makefile  README.md  antenna_info.cpp  check_for_MYL.cpp  example_ara_analysis  example_ara_analysis.cpp  timeCheck.cpp
geom_recovery/: README.md  geomCheck_myl.cpp  geomCheck_uzair.cpp  geomCheck_uzair.cxx
proposal2019/: proposal_passing_distro.cxx
(+103 files in other folders)
